lottery.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Arial', sans-serif;
}

body {
  height: 100vh;
  background-color: #f5f5f5;
  color: #333;
  display: flex;
  align-items: center;
}

main{
  margin: auto;
  background: #ffffff;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  width: 400px;
  text-align: center;
}

section{
  padding: 20px;
}

header {
  width: 100%;
  color: white;
  font-size: 1.5em;
  margin-bottom: 15px;
  box-shadow: 0 1px 12px rgba(103, 103, 103, 0.315);
  padding: 20px;
  background-color:  rgb(128, 2, 2);
}

.header-title{
  display: flex;
  justify-content: center;
}

header p{
 font-size: 0.7rem;
 color: white;
 font-style: italic;
}

.account{
  display: flex;
  align-items: center;
  justify-content: end;
  margin-bottom: 20px;
}

.balance-label {
  padding-right: 10px;
  font-weight: bold;
  color: #555;
}

.balance-container {
  background-color: #d4edda;
  border: 1px solid #c3e6cb;
  padding: 5px 10px;
  border-radius: 5px;
  font-size: 1.2em;
  color: #155724;
}

.stake-container {
  margin-bottom: 35px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: end;
}

.stake-and-alerts {
  margin-top: 20px;
}

.stake-amount-container{
  display: flex;
  align-items: center;
  justify-content: end;
}

.stake-input-label{
  font-size: 1em;
  color: #555;
  padding-right: 10px;
}

.amount-container {
  max-width: 30%;
  display: flex;
  align-items: center;
  border: 1px solid gray;
  border-radius: 5px;
  font-size: 1.2em;
  padding: 0 0 0 5px;
}

input.stake-amount {
  font-size: 1em;
  padding: 0 0 0 2px;
  border-radius: 5px;
  border: 0;
  outline: 0;
  text-align: center;
  max-width: 88%;
}

p.insufficient-funds {
  font-size: 0.7em;
  color: red;
  text-align: end;
  font-weight: bold;
}

.increment-buttons {
  width: 80%;
  display: flex;
  flex-wrap: wrap;
  margin-top: 5px;
  justify-content: end;
}

.stake-increment {
  width: 65px;
  background-color: #f0f8ff;
  border: 1px solid #7ec8c2;
  border-radius: 5px;
  padding: 10px;
  margin: 0 0 2px 1px;
  cursor: pointer;
  transition: background-color 0.3s;
  flex-grow: 1;
}

.stake-increment:hover {
  background-color: #7ec8c2;
}

.choose-numbers {
  margin-top: 20px;
  display: flex;
  justify-content: end;
  align-items: center;
  border: 0;
}

.choose-numbers input {
  width: 17%;
  height: 30px;
  margin-left: 5px;
  border-radius: 5px;
  border: 1px solid #ccc;
  text-align: center;
}

.choose{
  font-size: 0.9em;
  color: #555;
  padding-right: 10px;
  font-weight: bold;
}

.outcomes-div {
  margin-top: 20px;
  display: flex;
  align-items: center;
  justify-content: end;
}

span.outcome-label{
  font-weight: bold;
  color: #d34444;
  font-size: 0.9em;
}

.outcomes {
  background-color: #f0f8ff;
  border: 1px solid #7ec8c2;
  padding: 15px;
  border-radius: 50%;
  width: 50px;
  font-weight: bold;
  font-size: 1.2em;
  display: inline-block;
  margin: 0 10px;
  color: #333;
  text-align: center;
}

.play {
  margin-top: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
}

button.draw {
  background-color: #7ec8c2;
  color: #fff;
  padding: 10px 20px;
  font-size: 1em;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s;
}

button.draw:hover {
  background-color: #4db8a8;
}

button[type="reset"] {
  background-color: #f8d7da;
  color: #721c24;
  border-radius: 5px;
  padding: 10px 20px;
  cursor: pointer;
  border: none;
  display: none;
}

button[type="reset"]:hover {
  background-color: #f1b0b7;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

